--- a/config.yml
+++ b/config.yml
@@ -23,9 +23,13 @@ worker_pool:
   worker_count: 10
   queue_size: 5
 
-trace:
-  enabled: true
-  jaeger_host: localhost
-  jaeger_port: 6831
+telemetry:
   service_namespace_key: shortify_namespace
   service_name_key: shortify
+  trace:
+    enabled: true
+    jaeger_host: localhost
+    jaeger_port: 6831
+  meter:
+    enabled: true
+    address: :8080
